tests/fail/member_parsing.tk
import std/io::println
import core/traits::{@encap}

shape Point(
    x: i32,
    y: i32
)
shape Node(
    val: i32,
    nul ^point: Point
    pp: Point?
)
impl Node@encap {
    fn drop(self#) {
        println("drop Node")
    }
}

fn main() -> i32 {
    // Path 1: Success path
    auto n_ok = Node(val=1, ^point=new Point(x=2, y=3), pp=none)
    auto v1 = n_ok.point.x // EXPECT: error[E0447]:
    println("Success access: {}", v1) // Should print 2

    auto v2 = n_ok.pp.x // EXPECT: error[E0447]:
    println("Success access: {}", v2) // Should print 4
    
    return 0
}
